# hippocampus_startup

./: CMakeLists.txt  package.xml  uuv_x_sitl.main.mix
launch/: hippocampus.launch  hippocampus_uuv_world.launch  hippocampus_uuv_world_diver_following.launch  hippocampus_uuv_world_pid_control_stereo_camera.launch  hippocampus_uuv_world_pid_control_stereo_camera_circle_world.launch  hippocampus_uuv_world_pid_control_stereo_camera_elevation_mapping.launch  hippocampus_uuv_world_pid_control_stereo_camera_elevation_mapping_coral_terrain.launch  hippocampus_uuv_world_pid_control_stereo_camera_elevation_mapping_great_barrier_reef.launch  hippocampus_uuv_world_pid_control_stereo_camera_elevation_mapping_sinosoidal_terrain.launch
models/uuv_hippocampus/: uuv_hippocampus.sdf
models/uuv_hippocampus_stereo_camera/: model.config  uuv_hippocampus_stereo_camera.sdf
rviz/: uuv_hippocampus_pointcloud.rviz
src/: hippocampus_startup_node.cpp  startup_node.cpp  uuv_position_controller.cpp
worlds/: reef.world
